# GSW-Python

./: .appveyor.yml  .buildinfo  .doctr-files  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  .zenodo.json  LICENSE.txt  MANIFEST.in  README  README.md  README.rst  _utilities.py  appveyor.yml  c_header_parser.py  conversions.html  density.html  docstring_parts.py  docstring_utils.py  energy.html  freezing.html  genindex.html  geostrophy.html  github_deploy_key.enc  gsw.html  gsw_flat.html  ice.html  index.html  install.html  intro.html  make_ufunc_wrappers.py  make_ufuncs.py  make_wrapped_ufuncs.py  make_wrapper.py  matlab_parser.py  objects.inv  parse_declarations.py  py-modindex.html  pyproject.toml  (+6 more)
.github/: dependabot.yml
.github/workflows/: build.yml  build_linux.yml  build_mac.yml  build_win.yml  cibuildwheel.yml  deploy-docs.yml  pre-commit.yml  tarball-tests.yml  test_code_generation.yml  tests.yml
.github/workflows/actions/: entrypoint.sh
.github/workflows/actions/manylinux1_x86_64/: action.yml
.github/workflows/actions/manylinux2010_x86_64/: action.yml
_modules/: index.html
_modules/gsw/: _fixed_wrapped_ufuncs.html  _utilities.html  _wrapped_ufuncs.html  conversions.html  geostrophy.html  interpolation.html  stability.html  utility.html
_sources/: gsw.rst.txt  gsw_flat.rst.txt  index.rst.txt  install.rst.txt  intro.rst.txt  stability.rst.txt
_static/: documentation_options.js
conda.recipe/: meta.yaml
dev/: .doctr-files  conversions.html  energy.html  freezing.html  geostrophy.html  gsw_flat.html  intro.html  objects.inv
dev/_modules/: index.html
dev/_modules/gsw/: _fixed_wrapped_ufuncs.html  geostrophy.html  stability.html
dev/_sources/: energy.rst.txt  freezing.rst.txt  index.rst.txt
doc/: Makefile  gsw.rst  index.rst
docs/: conf.py  conversions.rst  density.rst  gsw.rst  gsw_flat.rst  ice.rst  index.rst  install.rst
docs/_static/: readme_static.txt
gsw/: __init__.py  _fixed_wrapped_ufuncs.py  _pyfunctions.py  _utilities.py  _version.py  _wrapped_ufuncs.py  conversions.py  density.py  energy.py  freezing.py  geostrophy.py  gibbs_function.py  ice.py  interpolation.py  stability.py  utility.py
gsw/ice/: __init__.py  freezing.py
gsw/tests/: _WIP_test_ufuncs.py  check_functions.py  geo_strf_dyn_height.npy  geo_strf_steric_height.npy  geo_strf_velocity.npy  gsw_check_functions_save.m  gsw_cv_cf.mat  gsw_cv_v3_0.npz  gsw_matlab_v3  list_check_functions.py  mat2npz.py  test_check_functions.py  test_dll_export.py  test_fixups.py  test_geostrophy.py  test_gibbs.py  test_interpolation.py  test_utility.py  test_xarray.py  write_geo_npyfiles.py
src/: _funcs.c  _ufuncs.c  method_bodies.c  method_def_entries.c
src/c_gsw/: LICENSE  Makefile  gsw_check_data.c  gsw_check_functions.c  gsw_internal_const.h  gsw_oceanographic_toolbox.c  gsw_oceanographic_toolbox.cpp  gsw_saar.c  gswteos-10.h
src2/: _ufuncs.c  method_bodies.c  method_def_entries.c
src2/c_gsw/: gsw_internal_const.h  gsw_oceanographic_toolbox.cpp  gsw_saar.cpp  gswteos-10.h  gswteos-10_cpp.h
tools/: README.txt  _utilities.py  c_header_parser.py  categories.py  codegen  copy_from_GSW-C.py  docstring_parts.py  docstring_utils.py  fix_wrapped_ufunc_typos.py  make_ufuncs.py  make_wrapped_ufuncs.py  mat2npz.py  matlab_parser.py
version-v3.3.1/: .doctr-files  ice.html  install.html  searchindex.js
version-v3.3.1/_modules/gsw/: _utilities.html  conversions.html  utility.html
version-v3.3.1/_sources/: geostrophy.rst.txt  gsw_flat.rst.txt
