[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "build",
  "oldest-supported-numpy",
  "pip>9.0.1",
  "setuptools>=42",
  "setuptools_scm[toml]>=3.4",
  "wheel",
]

[project]
name = "gsw"
description = "Gibbs Seawater Oceanographic Package of TEOS-10"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Eric Firing, Filipe Fernandes", email = "efiring@hawaii.edu"},
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]
dynamic = [
  "readme",
  "version",
]
[project.urls]
documentation = "https://teos-10.github.io/GSW-Python/"
homepage = "https://www.teos-10.org/"
repository = "https://github.com/TEOS-10/GSW-python"

[tool.setuptools]
license-files = ["LICENSE.txt"]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["gsw"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
readme = {file = "README.md", content-type = "text/markdown"}

[tool.setuptools_scm]
write_to = "gsw/_version.py"
write_to_template = "__version__ = '{version}'"

[tool.check-manifest]
ignore = [
    "*.yml",
    ".coveragerc",
    "docs",
    "docs/*",
    "*.enc",
    "tools",
    "tools/*",
    "gsw/_version.py",
]

[tool.ruff]
select = [
    "A", # flake8-builtins
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "F", # flakes
    "I", # import sorting
    # "T20", # flake8-print
    "UP", # upgrade
]
target-version = "py38"
line-length = 105

ignore = [
    "F401",
    "E501",
    "E713",
]

exclude = [
  "tools",
]

[tool.ruff.per-file-ignores]
"docs/source/conf.py" = [
  "A001",
]
