[metadata]
name = gsw
description = Gibbs Seawater Oceanographic Package of TEOS-10
author = Eric Firing, Filipe Fernandes
author_email = efiring@hawaii.edu
url = https://github.com/TEOS-10/GSW-python
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD
license_file = LICENSE.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering


[options]
zip_safe = False
install_requires =
    numpy
python_requires = >=3.6
packages = find:
include_package_data = True

[check-manifest]
ignore =
    *.yml
    .coveragerc
    docs
    docs/*
    *.enc
    tools
    tools/*
    gsw/_version.py

[flake8]
max-line-length = 105
select = C,E,F,W,B,B950
ignore = E203, E501, W503, E713
